cabal-version: 2.0
name:          rel8
version:       0.1.0.0
synopsis:      Hey! Hey! Can u rel8?
license:       BSD3
license-file:  LICENSE
author:        Oliver Charles
maintainer:    ollie@ocharles.org.uk
build-type:    Custom

custom-setup
  setup-depends:
      base           >=4 && <5
    , Cabal
    , cabal-doctest  ^>=1

library
  build-depends:
      aeson
    , base              >=4.12    && <4.15
    , bytestring
    , case-insensitive
    , contravariant
    , hasql
    , opaleye           ^>=0.7.0.0
    , profunctors
    , scientific
    , semigroupoids
    , text
    , these
    , time
    , uuid

  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module -Wno-deprecations
    -Wno-monomorphism-restriction -Wno-missing-local-signatures
    -Wno-implicit-prelude -Wno-orphan-instances

  hs-source-dirs:   src
  exposed-modules:
    Rel8
    Rel8.Tabulate
    Rel8.Text
    Rel8.Time

  other-modules:
    Rel8.Aggregate
    Rel8.Context
    Rel8.DatabaseType
    Rel8.DBType
    Rel8.DBType.DBEq
    Rel8.DBType.DBMax
    Rel8.DBType.DBMin
    Rel8.DBType.DBMonoid
    Rel8.DBType.DBOrd
    Rel8.DBType.DBSemigroup
    Rel8.DBType.DBSum
    Rel8.Expr
    Rel8.Expr.Bool
    Rel8.Expr.Function
    Rel8.Expr.Instances
    Rel8.Expr.Null
    Rel8.Expr.Opaleye
    Rel8.Generic
    Rel8.HTable
    Rel8.HTable.HIdentity
    Rel8.HTable.HMapTable
    Rel8.HTable.HPair
    Rel8.Nullify
    Rel8.Optimize
    Rel8.PrimitiveType
    Rel8.PrimitiveType.JSONBEncoded
    Rel8.PrimitiveType.JSONEncoded
    Rel8.PrimitiveType.ReadShow
    Rel8.Query
    Rel8.Query.Order
    Rel8.Serializable
    Rel8.Statement.Delete
    Rel8.Statement.Insert
    Rel8.Statement.Returning
    Rel8.Statement.Select
    Rel8.Statement.Update
    Rel8.Table
    Rel8.Table.Bool
    Rel8.Table.Congruent
    Rel8.Table.EitherTable
    Rel8.Table.EqTable
    Rel8.Table.ListTable
    Rel8.Table.MaybeTable
    Rel8.Table.NonEmptyTable
    Rel8.Table.Opaleye
    Rel8.Table.Selects
    Rel8.Table.TheseTable
    Rel8.TableSchema
    Rel8.TableSchema.ColumnSchema

test-suite tests
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , case-insensitive
    , containers
    , hasql
    , hedgehog          ^>=1.0.2
    , lifted-base       ^>=0.2.3.12
    , monad-control     ^>=1.0.2.3
    , rel8
    , scientific
    , tasty
    , tasty-hedgehog
    , text
    , time
    , tmp-postgres      ^>=1.34.1.0
    , uuid

  main-is:          Main.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-deprecations -Wno-monomorphism-restriction
    -Wno-missing-local-signatures -Wno-implicit-prelude

test-suite doctests
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , base-compat
    , bytestring
    , doctest
    , hasql
    , tmp-postgres

  main-is:          Doctest.hs
  default-language: Haskell2010
