cabal-version:       2.0
name:                rel8
version:             0.1.0.0
synopsis:            Hey! Hey! Can u rel8?
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Custom

custom-setup
 setup-depends:
   base >= 4 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1

library
  build-depends:
      aeson
    , base ^>=4.12 || ^>= 4.13 || ^>= 4.14
    , bytestring
    , case-insensitive
    , casing
    , contravariant
    , hasql
    , opaleye ^>= 0.7.1.0
    , profunctors
    , scientific
    , semialign
    , semigroupoids
    , text
    , these
    , time
    , uuid
  default-language:
    Haskell2010
  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures 
  hs-source-dirs:
    src
  exposed-modules:
    Rel8
    Rel8.Expr.Num
    Rel8.Expr.Text
    Rel8.Expr.Time
    Rel8.Tabulate

  other-modules:
    Rel8.Aggregate

    Rel8.Expr
    Rel8.Expr.Aggregate
    Rel8.Expr.Array
    Rel8.Expr.Bool
    Rel8.Expr.Eq
    Rel8.Expr.Function
    Rel8.Expr.Null
    Rel8.Expr.Opaleye
    Rel8.Expr.Ord
    Rel8.Expr.Order
    Rel8.Expr.Serialize

    Rel8.FCF

    Rel8.Kind.Labels
    Rel8.Kind.Necessity

    Rel8.Order

    Rel8.Query
    Rel8.Query.Aggregate
    Rel8.Query.Distinct
    Rel8.Query.Each
    Rel8.Query.Either
    Rel8.Query.Exists
    Rel8.Query.Filter
    Rel8.Query.Limit
    Rel8.Query.List
    Rel8.Query.Maybe
    Rel8.Query.Null
    Rel8.Query.Opaleye
    Rel8.Query.Order
    Rel8.Query.Set
    Rel8.Query.SQL
    Rel8.Query.These
    Rel8.Query.Values

    Rel8.Schema.Column
    Rel8.Schema.Context
    Rel8.Schema.Context.Identity
    Rel8.Schema.Context.Label
    Rel8.Schema.Context.Nullify
    Rel8.Schema.Dict
    Rel8.Schema.Field
    Rel8.Schema.Generic
    Rel8.Schema.Generic.Test
    Rel8.Schema.HTable
    Rel8.Schema.HTable.Either
    Rel8.Schema.HTable.Identity
    Rel8.Schema.HTable.Label
    Rel8.Schema.HTable.List
    Rel8.Schema.HTable.MapTable
    Rel8.Schema.HTable.Maybe
    Rel8.Schema.HTable.NonEmpty
    Rel8.Schema.HTable.Nullify
    Rel8.Schema.HTable.Pair
    Rel8.Schema.HTable.Quartet
    Rel8.Schema.HTable.Quintet
    Rel8.Schema.HTable.These
    Rel8.Schema.HTable.Trio
    Rel8.Schema.HTable.Type
    Rel8.Schema.HTable.Vectorize
    Rel8.Schema.Insert
    Rel8.Schema.Kind
    Rel8.Schema.Name
    Rel8.Schema.Nullability
    Rel8.Schema.Nullability.Internal
    Rel8.Schema.Spec
    Rel8.Schema.Spec.ConstrainDBType
    Rel8.Schema.Spec.ConstrainType
    Rel8.Schema.Table

    Rel8.Statement.Delete
    Rel8.Statement.Insert
    Rel8.Statement.Returning
    Rel8.Statement.Select
    Rel8.Statement.Update
    Rel8.Statement.View

    Rel8.Table
    Rel8.Table.Aggregate
    Rel8.Table.Alternative
    Rel8.Table.Bool
    Rel8.Table.Either
    Rel8.Table.Eq
    Rel8.Table.Insert
    Rel8.Table.Lifted
    Rel8.Table.List
    Rel8.Table.Maybe
    Rel8.Table.Name
    Rel8.Table.NonEmpty
    Rel8.Table.Opaleye
    Rel8.Table.Ord
    Rel8.Table.Order
    Rel8.Table.Recontextualize
    Rel8.Table.Serialize
    Rel8.Table.These
    Rel8.Table.Undefined

    Rel8.Type
    Rel8.Type.Array
    Rel8.Type.Array1D
    Rel8.Type.Eq
    Rel8.Type.Information
    Rel8.Type.JSONEncoded
    Rel8.Type.JSONBEncoded
    Rel8.Type.Monoid
    Rel8.Type.Num
    Rel8.Type.Ord
    Rel8.Type.ReadShow
    Rel8.Type.Semigroup
    Rel8.Type.String
    Rel8.Type.Sum
    Rel8.Type.Tag

    Rel8.Opaque
    Rel8.Schema.Structure

test-suite tests
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , case-insensitive
    , containers
    , hasql
    , hedgehog          ^>=1.0.2
    , lifted-base       ^>=0.2.3.12
    , monad-control     ^>=1.0.2.3
    , rel8
    , scientific
    , tasty
    , tasty-hedgehog
    , text
    , these
    , time
    , tmp-postgres      ^>=1.34.1.0
    , uuid

  main-is:          Main.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-deprecations -Wno-monomorphism-restriction
    -Wno-missing-local-signatures -Wno-implicit-prelude
  buildable: False

test-suite doctests
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , base-compat
    , bytestring
    , doctest
    , hasql
    , tmp-postgres

  main-is:          Doctest.hs
  default-language: Haskell2010
  buildable: False

test-suite random-queries
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , case-insensitive
    , containers
    , hasql
    , hedgehog          ^>=1.0.5
    , lifted-base       ^>=0.2.3.12
    , monad-control     ^>=1.0.2.3
    , rel8
    , scientific
    , tasty
    , tasty-hedgehog
    , text
    , time
    , these
    , tmp-postgres      ^>=1.34.1.0
    , uuid

  main-is:          ArbitraryQueries.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-deprecations -Wno-monomorphism-restriction
    -Wno-missing-local-signatures -Wno-implicit-prelude -Wno-all-missed-specialisations
