cabal-version:       2.0
name:                rel8
version:             1.4.0.0
synopsis:            Hey! Hey! Can u rel8?
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
homepage:            https://github.com/circuithub/rel8
bug-reports:         https://github.com/circuithub/rel8/issues
build-type:          Simple
extra-doc-files:
    README.md
    Changelog.md

source-repository head
    type: git
    location: https://github.com/circuithub/rel8

library
  build-depends:
      aeson
    , base ^>= 4.14 || ^>=4.15 || ^>=4.16
    , bifunctors
    , bytestring
    , case-insensitive
    , comonad
    , contravariant
    , hasql ^>= 1.4.5.1 || ^>= 1.5.0.0 || ^>= 1.6.0.0
    , opaleye ^>= 0.9.3.3
    , pretty
    , profunctors
    , product-profunctors
    , scientific
    , semialign
    , semigroupoids
    , text
    , these
    , time
    , uuid
  default-language:
    Haskell2010
  ghc-options:
    -Werror=missing-methods -Werror=incomplete-patterns -Werror=missing-fields
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures
    -Wno-missing-kind-signatures
  hs-source-dirs:
    src
  exposed-modules:
    Rel8
    Rel8.Expr.Num
    Rel8.Expr.Text
    Rel8.Expr.Time
    Rel8.Tabulate

  other-modules:
    Rel8.Aggregate

    Rel8.Column
    Rel8.Column.ADT
    Rel8.Column.Either
    Rel8.Column.Lift
    Rel8.Column.List
    Rel8.Column.Maybe
    Rel8.Column.NonEmpty
    Rel8.Column.Null
    Rel8.Column.These

    Rel8.Expr
    Rel8.Expr.Aggregate
    Rel8.Expr.Array
    Rel8.Expr.Bool
    Rel8.Expr.Default
    Rel8.Expr.Eq
    Rel8.Expr.Function
    Rel8.Expr.Null
    Rel8.Expr.Opaleye
    Rel8.Expr.Ord
    Rel8.Expr.Order
    Rel8.Expr.Sequence
    Rel8.Expr.Serialize

    Rel8.FCF

    Rel8.Kind.Algebra
    Rel8.Kind.Context

    Rel8.Generic.Construction
    Rel8.Generic.Construction.ADT
    Rel8.Generic.Construction.Record
    Rel8.Generic.Map
    Rel8.Generic.Record
    Rel8.Generic.Rel8able
    Rel8.Generic.Table
    Rel8.Generic.Table.ADT
    Rel8.Generic.Table.Record

    Rel8.Order

    Rel8.Query
    Rel8.Query.Aggregate
    Rel8.Query.Distinct
    Rel8.Query.Each
    Rel8.Query.Either
    Rel8.Query.Evaluate
    Rel8.Query.Exists
    Rel8.Query.Filter
    Rel8.Query.Indexed
    Rel8.Query.Limit
    Rel8.Query.List
    Rel8.Query.Maybe
    Rel8.Query.Null
    Rel8.Query.Opaleye
    Rel8.Query.Order
    Rel8.Query.Rebind
    Rel8.Query.Set
    Rel8.Query.SQL
    Rel8.Query.These
    Rel8.Query.Values

    Rel8.Schema.Context.Nullify
    Rel8.Schema.Dict
    Rel8.Schema.Field
    Rel8.Schema.HTable
    Rel8.Schema.HTable.Either
    Rel8.Schema.HTable.Identity
    Rel8.Schema.HTable.Label
    Rel8.Schema.HTable.List
    Rel8.Schema.HTable.MapTable
    Rel8.Schema.HTable.Maybe
    Rel8.Schema.HTable.NonEmpty
    Rel8.Schema.HTable.Nullify
    Rel8.Schema.HTable.Product
    Rel8.Schema.HTable.These
    Rel8.Schema.HTable.Vectorize
    Rel8.Schema.Kind
    Rel8.Schema.Name
    Rel8.Schema.Null
    Rel8.Schema.Result
    Rel8.Schema.Spec
    Rel8.Schema.Table

    Rel8.Statement.Delete
    Rel8.Statement.Insert
    Rel8.Statement.OnConflict
    Rel8.Statement.Returning
    Rel8.Statement.Select
    Rel8.Statement.Set
    Rel8.Statement.SQL
    Rel8.Statement.Update
    Rel8.Statement.Using
    Rel8.Statement.View
    Rel8.Statement.Where

    Rel8.Table
    Rel8.Table.ADT
    Rel8.Table.Aggregate
    Rel8.Table.Alternative
    Rel8.Table.Bool
    Rel8.Table.Cols
    Rel8.Table.Either
    Rel8.Table.Eq
    Rel8.Table.HKD
    Rel8.Table.List
    Rel8.Table.Maybe
    Rel8.Table.Name
    Rel8.Table.NonEmpty
    Rel8.Table.Null
    Rel8.Table.Nullify
    Rel8.Table.Opaleye
    Rel8.Table.Ord
    Rel8.Table.Order
    Rel8.Table.Projection
    Rel8.Table.Rel8able
    Rel8.Table.Serialize
    Rel8.Table.These
    Rel8.Table.Transpose
    Rel8.Table.Undefined

    Rel8.Type
    Rel8.Type.Array
    Rel8.Type.Composite
    Rel8.Type.Eq
    Rel8.Type.Enum
    Rel8.Type.Information
    Rel8.Type.JSONEncoded
    Rel8.Type.JSONBEncoded
    Rel8.Type.Monoid
    Rel8.Type.Num
    Rel8.Type.Ord
    Rel8.Type.ReadShow
    Rel8.Type.Semigroup
    Rel8.Type.String
    Rel8.Type.Sum
    Rel8.Type.Tag

test-suite tests
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , case-insensitive
    , containers
    , hasql
    , hasql-transaction
    , hedgehog          ^>= 1.0 || ^>= 1.1
    , mmorph
    , rel8
    , scientific
    , tasty
    , tasty-hedgehog
    , text
    , time
    , tmp-postgres      ^>=1.34.1.0
    , transformers
    , uuid

  other-modules:
    Rel8.Generic.Rel8able.Test

  main-is:          Main.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-unsafe -Wno-safe -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-prepositive-qualified-module
    -Wno-deprecations -Wno-monomorphism-restriction
    -Wno-missing-local-signatures -Wno-implicit-prelude
